...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_all_medium"
            android:layout_marginEnd="@dimen/margin_all_medium">

            <ImageView
                android:id="@+id/iv_detail_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
...
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_all_toolbar"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_detail_bookmark"
                app:layout_constraintStart_toEndOf="@id/iv_detail_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_detail_bookmark"
                android:layout_width="wrap_content"
...
                android:layout_marginTop="@dimen/margin_all_medium"
                android:layout_marginEnd="@dimen/margin_all_medium"
                android:layout_marginBottom="@dimen/margin_all_small"
                android:transitionName="@string/photo"
                app:cardCornerRadius="@dimen/radius_all_tiny"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_detail_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/all_image"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
            <TextView
                android:id="@+id/tv_detail_name"
                style="@style/TextContent.Title"
                android:layout_marginStart="@dimen/margin_all_medium"
                android:layout_marginEnd="@dimen/margin_all_medium"
                android:transitionName="@string/all_name"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_detail" />

            <TextView
                android:id="@+id/tv_detail_date"
                style="@style/TextContent.Desc"
                android:layout_marginTop="@dimen/margin_all_small"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_description"
                app:layout_constraintEnd_toEndOf="@id/tv_detail_name"
                app:layout_constraintStart_toStartOf="@id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_name" />

            <TextView
                android:id="@+id/tv_detail_description"
...
