...
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_all_toolbar"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_home_maps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_home_maps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_all_medium"
                android:src="@drawable/ic_map"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_home_bookmarked"
                app:layout_constraintStart_toEndOf="@id/tv_home_toolbar"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />

            <ImageView
                android:id="@+id/iv_home_bookmarked"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_all_medium"
                android:src="@drawable/ic_bookmarked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_home_setting"
                app:layout_constraintStart_toEndOf="@id/iv_home_maps"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />

            <ImageView
                android:id="@+id/iv_home_setting"
...
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_home"
        tools:listitem="@layout/list_items" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_all_medium"
        android:contentDescription="@string/add_title"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
...
