<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/iv_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_poster_medium"
            android:layout_marginStart="@dimen/margin_all_medium"
            android:layout_marginTop="@dimen/margin_all_xlarge"
            android:layout_marginEnd="@dimen/margin_all_medium"
            android:contentDescription="@string/all_image"
            android:src="@mipmap/ic_dicoding"
            android:transitionName="@string/all_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_register_title"
            style="@style/TextContent.Title"
            android:text="@string/all_register"
            app:layout_constraintEnd_toEndOf="@id/iv_register"
            app:layout_constraintStart_toStartOf="@id/iv_register"
            app:layout_constraintTop_toBottomOf="@id/iv_register" />

        <TextView
            android:id="@+id/tv_register_desc"
            style="@style/TextContent.Desc"
            android:layout_marginTop="@dimen/margin_all_small"
            android:text="@string/register_desc"
            app:layout_constraintEnd_toEndOf="@id/iv_register"
            app:layout_constraintStart_toStartOf="@id/iv_register"
            app:layout_constraintTop_toBottomOf="@id/tv_register_title" />

        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_medium"
            android:autofillHints="name"
            android:background="@drawable/bg_edittext_rounded"
            android:hint="@string/register_example_hint"
            android:inputType="textPersonName"
            android:labelFor="@id/tv_register_title"
            android:padding="@dimen/margin_all_medium"
            app:layout_constraintEnd_toEndOf="@id/iv_register"
            app:layout_constraintStart_toStartOf="@id/iv_register"
            app:layout_constraintTop_toBottomOf="@id/tv_register_desc" />

        <com.example.storyapps.ui.customview.EditTextEmail
            android:id="@+id/ed_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_medium"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_edittext_rounded"
            android:hint="@string/all_email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin_all_medium"
            android:transitionName="@string/all_email_ed"
            app:layout_constraintEnd_toEndOf="@id/iv_register"
            app:layout_constraintStart_toStartOf="@id/iv_register"
            app:layout_constraintTop_toBottomOf="@id/ed_register_name" />

        <com.example.storyapps.ui.customview.EditTextPassword
            android:id="@+id/ed_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_medium"
            android:autofillHints="password"
            android:background="@drawable/bg_edittext_rounded"
            android:hint="@string/all_password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/margin_all_medium"
            android:transitionName="@string/all_password_ed"
            app:layout_constraintEnd_toEndOf="@id/iv_register"
            app:layout_constraintStart_toStartOf="@id/iv_register"
            app:layout_constraintTop_toBottomOf="@id/ed_register_email" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_medium"
            android:background="@drawable/bg_button"
            android:text="@string/all_register"
            android:textColor="@color/primaryTextColor"
            android:transitionName="@string/all_register"
            app:layout_constraintEnd_toEndOf="@id/iv_register"
            app:layout_constraintStart_toStartOf="@id/iv_register"
            app:layout_constraintTop_toBottomOf="@id/ed_register_password" />

        <ProgressBar
            android:id="@+id/pb_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>